feat: allow custom primary menu categories

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(update_scenario)
 export(update_secondary_menu)
 export(update_social)
 export(update_title)
+export(update_menu_categories)
 import(configr)
 import(dplyr)
 import(flexdashboard)
