Update vignette template paths

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: eurostatRTool
+Package: eurostatRToolCustom
 Title: Data Visualization and Interpretation for Short-Term Economic
         Analysis
 Version: 0.0.0.9000
